<resources>
    <string name="app_name" translatable="false">buggy note</string>
    <string name="action_settings">Settings</string>

    <string name="menu_notes">Notes</string>
    <string name="menu_tags">Tags</string>
    <string name="item_view">Item view</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="save">Save</string>
    <string name="create_new_tag">Create new tag</string>
    <string name="exist_tag">Tag existed</string>
    <string name="last_edit">Last edited: %1$s</string>
    <string name="add_new_tag">Add new tag</string>
    <string name="remove">Remove</string>
    <string name="cancel" translatable="false">@android:string/cancel</string>
    <string name="undo">Undo</string>
    <string name="moved_to_archive">Moved to Archive</string>
    <string name="nothing_here">Nothing here</string>
    <string name="format_bold">Format Bold</string>
    <string name="format_italic">Format italic</string>
    <string name="text_alignment">Text Alignment</string>
    <string name="set_font_type">Set font type</string>
    <string name="settings">Settings</string>
    <string name="display">Display</string>
    <string name="show_note_list_as">Show note list as</string>

    <string name="note_list_view_type_key" translatable="false">note_list_view_type_key</string>
    <string name="remove_from_device">Remove from device</string>
    <string name="remove_confirmation">Do you really want to delete this?</string>
    <string name="pinned">Pinned</string>
    <string name="others">Others</string>
    <string name="action_pin">Pin the note</string>
    <string name="pin_selected_notes">Pin selected notes</string>
    <string name="unpin_selected_notes">Unpin selected notes</string>
    <string name="archive">Archive</string>
    <string name="move_to_archive">Move to archive</string>
    <string name="unarchive">Unarchive</string>
    <string name="unarchived_moved_to_note_list">Unarchived</string>
    <string name="add_new_note">Create a note</string>
    <string name="remove_tag_dialog_title">Remove Tag?</string>
    <string name="remove_tag_dialog_content">Your notes won\'t be removed when delete this tag.</string>
</resources>